--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if(LINUX)
     set(CMAKE_CXX_COMPILER "/usr/bin/g++-9")
 endif()
 project(battleship)
-add_executable(battleship test.cpp grid.cpp drawing.cpp)
+add_executable(battleship main.cpp grid.cpp drawing.cpp UI.cpp)
 find_library(NCURSES NAMES ncurses)
 target_link_libraries(${PROJECT_NAME}
 	${NCURSES})
